--- a/css/reset.css
+++ b/css/reset.css
@@ -20,5 +20,5 @@ a {color:#333;text-decoration:none}
 a:active, a:hover {text-decoration:none}
 address,caption,cite,code,dfn,em,var {font-style:normal;font-weight:normal}
 
-html {font-size: 16px;}
+html {font-size: 16px; height: 100%;}
 body {padding: 0; margin: 0}
