--- a/css/reset.css
+++ b/css/reset.css
@@ -21,4 +21,4 @@ a:active, a:hover {text-decoration:none}
 address,caption,cite,code,dfn,em,var {font-style:normal;font-weight:normal}
 
 html {font-size: 16px; height: 100%;}
-body {padding: 0; margin: 0}
+body {padding: 0; margin: 0; height: 100%;}
