--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -6,6 +6,7 @@ header {
     background-color: #DD9B27;
     clear: both;
     text-align: center;
+	box-sizing: border-box;
 }
 #headerLeft {
     display: inline-block;
