--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -32,5 +32,13 @@ content {
     display: block;
     position: relative;
     overflow-y: auto;
-    height: 100%;
+	overflow-x: scroll;
+}
+#todoDisplay {
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
