--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -31,12 +31,17 @@ header {
 content {
     display: block;
     position: relative;
-    overflow-y: auto;
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
 	overflow-x: scroll;
 }
 #todoDisplay {
 	display: block;
 	position: absolute;
+	height: 100%;
+	padding: 10px;
+	box-sizing: border-box;
 	top: 0;
 	left: 0;
 	right: 0;
