--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,9 +1,13 @@
 @charset "utf-8";
 
+body {
+	background: #DD9B27;
+}
+
 header {
     width: 100%;
     padding: 8px;
-    background-color: #DD9B27;
+    background: RGBA(0, 0, 0, 0.15);
     clear: both;
     text-align: center;
 	box-sizing: border-box;
@@ -40,10 +44,17 @@ content {
 	display: block;
 	position: absolute;
 	height: 100%;
-	padding: 10px;
+	padding: 5px 10px;
 	box-sizing: border-box;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
+}
+#todoDisplay > dl {
+	display: inline-block;
+	width: 260px;
+	margin: 0 5px;
+	border-radius: 5px;
+	background: #E2E4E6;
 }
