--- a/css/reset.css
+++ b/css/reset.css
@@ -22,3 +22,5 @@ address,caption,cite,code,dfn,em,var {font-style:normal;font-weight:normal}
 
 html {font-size: 16px; height: 100%;}
 body {padding: 0; margin: 0; height: 100%;}
+
+dl, dt, dd {box-sizing: border-box;}
