--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -58,7 +58,7 @@ content {
 	margin: 0 5px;
 	border-radius: 5px;
 	background: RGBA(226, 228, 230, 0.8);
-	vertical-algin: top;
+	vertical-align: top;
 }
 #todoDisplay > dl > dt {
 	display: block;
