--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ header {
 #headerLeft {
 	float:left;
 }
-$headerCenter {
+#headerCenter {
 	display: inline-block;
 	padding: 3px 5px 0 5px;
 	border: 1px solid RGBA(255, 255, 255, 0.1);
