--- a/css/index.css
+++ b/css/index.css
@@ -98,3 +98,19 @@ content {
     z-index: 1;
     min-height: 0;
 }
+.list_subject {
+	padding: 8px 10px;
+	font-size: 18px;
+	font-weight: 900;
+	text-align: center;
+}
+.list_content > dl {
+	padding: 8px 10px;
+	margin-bottom: 10px;
+	border-radius: 5px;
+	background: #FFF;
+}
+.list_contnet > dl > dd {
+	font-size: 12px;
+	color: #9C9C9C;
+}
