--- a/css/index.css
+++ b/css/index.css
@@ -110,7 +110,7 @@ content {
 	border-radius: 5px;
 	background: #FFF;
 }
-.list_contnet > dl > dd {
+.list_content > dl > dd {
 	font-size: 12px;
 	color: #9C9C9C;
 }
