--- a/css/index.css
+++ b/css/index.css
@@ -104,11 +104,17 @@ content {
 	font-weight: 900;
 	text-align: left;
 }
+.list_subject > a {
+
+}
 .list_content > dl {
 	padding: 8px 10px;
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	border-radius: 5px;
 	background: #FFF;
+}
+.list_content > dt > a {
+
 }
 .list_content > dl > dd {
 	font-size: 12px;
