todo card shadow

--- a/css/index.css
+++ b/css/index.css
@@ -114,6 +114,7 @@ content {
 	margin-bottom: 5px;
 	border-radius: 5px;
 	background: #FFF;
+	box-shadow: 1px 1px #CCC;
 }
 .list_content > dt > a {
 
