--- a/css/mhw_kirin.css
+++ b/css/mhw_kirin.css
@@ -125,12 +125,6 @@ section > h2 {
     font-size: 2rem;
 }
 
-.chargeblade > b {
-    background-repeat: no-repeat;
-    background-image: url('http://game.capcom.com/manual/MHW_PC/img/weapon/weapon10.png');
-    background-size: auto 100%;
-}
-
 section > h2 > b {
     display: inline-block;
     padding-left: 40px;
@@ -177,6 +171,7 @@ div.weapon_ex > ol > li{
 div.weapon_ex > ol > li > ul > li {
     margin-left: 1rem;
     font-size: 1.3rem;
+    margin-bottom: 5px;
 }
 
 div.weapon_ex > ol > li > ul > li:before {
@@ -186,6 +181,7 @@ div.weapon_ex > ol > li > ul > li:before {
 div.weapon_ex > ol > li > ul > li > ul > li {
     font-size: 1.1rem;
     padding-left: 10px;
+    margin-bottom: 3px;
 }
 
 div.weapon_ex > ol > li > ul > li > ul > li:before {
