--- a/css/mhw_kirin.css
+++ b/css/mhw_kirin.css
@@ -160,6 +160,7 @@ section > div > h3:before {
 .weapon_info > img {
     float: left;
     width: 20%;
+    min-width: 150px;
     margin-right: 15px;
 }
 
