--- a/css/commend.css
+++ b/css/commend.css
@@ -1,4 +1,4 @@
-.comment_box > p {
+.comment_box p {
     display: inline-block;
     vertical-align: bottom;
     -webkit-background-size: 100% auto;
@@ -27,6 +27,42 @@
     width: 61px;
     height: 37px;
     background: url("//game.capcom.com/manual/MHW_PC/img/steam/controller/asia/key-WASD.png") no-repeat;
+}
+
+.comment_box p.key_w {
+    width: 20px;
+    height: 19px;
+    background: url("//game.capcom.com/manual/MHW_PC/img/steam/controller/asia/key-WASD.png") no-repeat;
+    -webkit-background-size: 300%;
+    background-size: 300%;
+    background-position: -20px 1px;
+}
+
+.comment_box p.key_a {
+    width: 20px;
+    height: 19px;
+    background: url("//game.capcom.com/manual/MHW_PC/img/steam/controller/asia/key-WASD.png") no-repeat;
+    -webkit-background-size: 300%;
+    background-size: 300%;
+    background-position: 0 -17px;
+}
+
+.comment_box p.key_s {
+    width: 20px;
+    height: 18px;
+    background: url("//game.capcom.com/manual/MHW_PC/img/steam/controller/asia/key-WASD.png") no-repeat;
+    -webkit-background-size: 300%;
+    background-size: 300%;
+    background-position: -20px -18px;
+}
+
+.comment_box p.key_d {
+    width: 20px;
+    height: 19px;
+    background: url("//game.capcom.com/manual/MHW_PC/img/steam/controller/asia/key-WASD.png") no-repeat;
+    -webkit-background-size: 300%;
+    background-size: 300%;
+    background-position: -40px -17px;
 }
 
 .key_space {
