--- a/css/weapons.css
+++ b/css/weapons.css
@@ -3,6 +3,6 @@
     background-size: auto 100%;
 }
 
-.chargeblade {
+.chargeBlade {
     background-image: url('http://game.capcom.com/manual/MHW_PC/img/weapon/weapon10.png');
 }
